--- a/angular.json
+++ b/angular.json
@@ -123,6 +123,65 @@
           }
         }
       }
-    }},
+    },
+    "your-style": {
+      "projectType": "library",
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss",
+          "skipTests": true
+        },
+        "@schematics/angular:class": {
+          "skipTests": true
+        },
+        "@schematics/angular:directive": {
+          "skipTests": true
+        },
+        "@schematics/angular:pipe": {
+          "skipTests": true
+        },
+        "@schematics/angular:service": {
+          "skipTests": true
+        }
+      },
+      "root": "projects/your-style",
+      "sourceRoot": "projects/your-style/src",
+      "prefix": "your",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/your-style/tsconfig.lib.json",
+            "project": "projects/your-style/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/your-style/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/your-style/src/test.ts",
+            "tsConfig": "projects/your-style/tsconfig.spec.json",
+            "karmaConfig": "projects/your-style/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/your-style/tsconfig.lib.json",
+              "projects/your-style/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
   "defaultProject": "your-style-demonstration"
 }
