--- a/projects/your-style/package.json
+++ b/projects/your-style/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@vladyour/your-style",
-  "version": "0.0.16",
+  "version": "0.0.20",
   "peerDependencies": {
     "@angular/common": "~10.1.6",
     "@angular/core": "~10.1.6",
     "moment": "^2.29.1"
   },
   "dependencies": {
+    "@angular/animations": "^11.0.0",
     "tslib": "^2.0.0"
   },
   "repository": {
